projectPLparser/pTest.output
State 29 conflicts: 4 shift/reduce
State 30 conflicts: 4 shift/reduce


Grammar

    0 $accept: stmtseq $end

    1 stmtseq: %empty
    2        | NEWLINE stmtseq
    3        | stmt NEWLINE stmtseq
    4        | error NEWLINE stmtseq

    5 stmt: formula

    6 term: VARIABLE
    7     | FUNCTION
    8     | FUNCTION OPENPAR termArgs CLOSEPAR

    9 termArgs: term
   10         | term KOMMA termArgs

   11 atom: PREDICATE
   12     | PREDICATE OPENPAR predArgs CLOSEPAR

   13 predArgs: term
   14         | term KOMMA predArgs

   15 formula: atom
   16        | TOP
   17        | BOTTOM
   18        | ALL VARIABLE formula
   19        | EX VARIABLE formula
   20        | formula AND formula
   21        | formula OR formula
   22        | formula IMP formula
   23        | formula BIIMP formula
   24        | NOT formula
   25        | OPENPAR formula CLOSEPAR


Terminals, with rules where they appear

$end (0) 0
error (256) 4
VARIABLE (258) 6 18 19
OPENPAR (259) 8 12 25
CLOSEPAR (260) 8 12 25
TOP (261) 16
BOTTOM (262) 17
KOMMA (263) 10 14
NEWLINE (264) 2 3 4
NOT (265) 24
ALL (266) 18
EX (267) 19
PREDICATE (268) 11 12
FUNCTION (269) 7 8
BIIMP (270) 23
IMP (271) 22
OR (272) 21
AND (273) 20


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
stmtseq (20)
    on left: 1 2 3 4, on right: 0 2 3 4
stmt (21)
    on left: 5, on right: 3
term (22)
    on left: 6 7 8, on right: 9 10 13 14
termArgs (23)
    on left: 9 10, on right: 8 10
atom (24)
    on left: 11 12, on right: 15
predArgs (25)
    on left: 13 14, on right: 12 14
formula (26)
    on left: 15 16 17 18 19 20 21 22 23 24 25, on right: 5 18 19 20
    21 22 23 24 25


State 0

    0 $accept: . stmtseq $end

    error      shift, and go to state 1
    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NEWLINE    shift, and go to state 5
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    $end  reduce using rule 1 (stmtseq)

    stmtseq  go to state 10
    stmt     go to state 11
    atom     go to state 12
    formula  go to state 13


State 1

    4 stmtseq: error . NEWLINE stmtseq

    NEWLINE  shift, and go to state 14


State 2

   25 formula: OPENPAR . formula CLOSEPAR

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 15


State 3

   16 formula: TOP .

    $default  reduce using rule 16 (formula)


State 4

   17 formula: BOTTOM .

    $default  reduce using rule 17 (formula)


State 5

    2 stmtseq: NEWLINE . stmtseq

    error      shift, and go to state 1
    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NEWLINE    shift, and go to state 5
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    $end  reduce using rule 1 (stmtseq)

    stmtseq  go to state 16
    stmt     go to state 11
    atom     go to state 12
    formula  go to state 13


State 6

   24 formula: NOT . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 17


State 7

   18 formula: ALL . VARIABLE formula

    VARIABLE  shift, and go to state 18


State 8

   19 formula: EX . VARIABLE formula

    VARIABLE  shift, and go to state 19


State 9

   11 atom: PREDICATE .
   12     | PREDICATE . OPENPAR predArgs CLOSEPAR

    OPENPAR  shift, and go to state 20

    $default  reduce using rule 11 (atom)


State 10

    0 $accept: stmtseq . $end

    $end  shift, and go to state 21


State 11

    3 stmtseq: stmt . NEWLINE stmtseq

    NEWLINE  shift, and go to state 22


State 12

   15 formula: atom .

    $default  reduce using rule 15 (formula)


State 13

    5 stmt: formula .
   20 formula: formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula

    BIIMP  shift, and go to state 23
    IMP    shift, and go to state 24
    OR     shift, and go to state 25
    AND    shift, and go to state 26

    $default  reduce using rule 5 (stmt)


State 14

    4 stmtseq: error NEWLINE . stmtseq

    error      shift, and go to state 1
    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NEWLINE    shift, and go to state 5
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    $end  reduce using rule 1 (stmtseq)

    stmtseq  go to state 27
    stmt     go to state 11
    atom     go to state 12
    formula  go to state 13


State 15

   20 formula: formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula
   25        | OPENPAR formula . CLOSEPAR

    CLOSEPAR  shift, and go to state 28
    BIIMP     shift, and go to state 23
    IMP       shift, and go to state 24
    OR        shift, and go to state 25
    AND       shift, and go to state 26


State 16

    2 stmtseq: NEWLINE stmtseq .

    $default  reduce using rule 2 (stmtseq)


State 17

   20 formula: formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula
   24        | NOT formula .

    BIIMP  shift, and go to state 23
    IMP    shift, and go to state 24
    OR     shift, and go to state 25
    AND    shift, and go to state 26

    $default  reduce using rule 24 (formula)


State 18

   18 formula: ALL VARIABLE . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 29


State 19

   19 formula: EX VARIABLE . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 30


State 20

   12 atom: PREDICATE OPENPAR . predArgs CLOSEPAR

    VARIABLE  shift, and go to state 31
    FUNCTION  shift, and go to state 32

    term      go to state 33
    predArgs  go to state 34


State 21

    0 $accept: stmtseq $end .

    $default  accept


State 22

    3 stmtseq: stmt NEWLINE . stmtseq

    error      shift, and go to state 1
    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NEWLINE    shift, and go to state 5
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    $end  reduce using rule 1 (stmtseq)

    stmtseq  go to state 35
    stmt     go to state 11
    atom     go to state 12
    formula  go to state 13


State 23

   23 formula: formula BIIMP . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 36


State 24

   22 formula: formula IMP . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 37


State 25

   21 formula: formula OR . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 38


State 26

   20 formula: formula AND . formula

    OPENPAR    shift, and go to state 2
    TOP        shift, and go to state 3
    BOTTOM     shift, and go to state 4
    NOT        shift, and go to state 6
    ALL        shift, and go to state 7
    EX         shift, and go to state 8
    PREDICATE  shift, and go to state 9

    atom     go to state 12
    formula  go to state 39


State 27

    4 stmtseq: error NEWLINE stmtseq .

    $default  reduce using rule 4 (stmtseq)


State 28

   25 formula: OPENPAR formula CLOSEPAR .

    $default  reduce using rule 25 (formula)


State 29

   18 formula: ALL VARIABLE formula .
   20        | formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula

    BIIMP  shift, and go to state 23
    IMP    shift, and go to state 24
    OR     shift, and go to state 25
    AND    shift, and go to state 26

    BIIMP     [reduce using rule 18 (formula)]
    IMP       [reduce using rule 18 (formula)]
    OR        [reduce using rule 18 (formula)]
    AND       [reduce using rule 18 (formula)]
    $default  reduce using rule 18 (formula)


State 30

   19 formula: EX VARIABLE formula .
   20        | formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula

    BIIMP  shift, and go to state 23
    IMP    shift, and go to state 24
    OR     shift, and go to state 25
    AND    shift, and go to state 26

    BIIMP     [reduce using rule 19 (formula)]
    IMP       [reduce using rule 19 (formula)]
    OR        [reduce using rule 19 (formula)]
    AND       [reduce using rule 19 (formula)]
    $default  reduce using rule 19 (formula)


State 31

    6 term: VARIABLE .

    $default  reduce using rule 6 (term)


State 32

    7 term: FUNCTION .
    8     | FUNCTION . OPENPAR termArgs CLOSEPAR

    OPENPAR  shift, and go to state 40

    $default  reduce using rule 7 (term)


State 33

   13 predArgs: term .
   14         | term . KOMMA predArgs

    KOMMA  shift, and go to state 41

    $default  reduce using rule 13 (predArgs)


State 34

   12 atom: PREDICATE OPENPAR predArgs . CLOSEPAR

    CLOSEPAR  shift, and go to state 42


State 35

    3 stmtseq: stmt NEWLINE stmtseq .

    $default  reduce using rule 3 (stmtseq)


State 36

   20 formula: formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula
   23        | formula BIIMP formula .

    IMP  shift, and go to state 24
    OR   shift, and go to state 25
    AND  shift, and go to state 26

    $default  reduce using rule 23 (formula)


State 37

   20 formula: formula . AND formula
   21        | formula . OR formula
   22        | formula . IMP formula
   22        | formula IMP formula .
   23        | formula . BIIMP formula

    OR   shift, and go to state 25
    AND  shift, and go to state 26

    $default  reduce using rule 22 (formula)


State 38

   20 formula: formula . AND formula
   21        | formula . OR formula
   21        | formula OR formula .
   22        | formula . IMP formula
   23        | formula . BIIMP formula

    AND  shift, and go to state 26

    $default  reduce using rule 21 (formula)


State 39

   20 formula: formula . AND formula
   20        | formula AND formula .
   21        | formula . OR formula
   22        | formula . IMP formula
   23        | formula . BIIMP formula

    $default  reduce using rule 20 (formula)


State 40

    8 term: FUNCTION OPENPAR . termArgs CLOSEPAR

    VARIABLE  shift, and go to state 31
    FUNCTION  shift, and go to state 32

    term      go to state 43
    termArgs  go to state 44


State 41

   14 predArgs: term KOMMA . predArgs

    VARIABLE  shift, and go to state 31
    FUNCTION  shift, and go to state 32

    term      go to state 33
    predArgs  go to state 45


State 42

   12 atom: PREDICATE OPENPAR predArgs CLOSEPAR .

    $default  reduce using rule 12 (atom)


State 43

    9 termArgs: term .
   10         | term . KOMMA termArgs

    KOMMA  shift, and go to state 46

    $default  reduce using rule 9 (termArgs)


State 44

    8 term: FUNCTION OPENPAR termArgs . CLOSEPAR

    CLOSEPAR  shift, and go to state 47


State 45

   14 predArgs: term KOMMA predArgs .

    $default  reduce using rule 14 (predArgs)


State 46

   10 termArgs: term KOMMA . termArgs

    VARIABLE  shift, and go to state 31
    FUNCTION  shift, and go to state 32

    term      go to state 43
    termArgs  go to state 48


State 47

    8 term: FUNCTION OPENPAR termArgs CLOSEPAR .

    $default  reduce using rule 8 (term)


State 48

   10 termArgs: term KOMMA termArgs .

    $default  reduce using rule 10 (termArgs)
